# T3

./: .gitignore  T3.sublime-project
res/styles/: light.qss
t3/: main.py
t3/data/: environment.py
t3/data/resources/: __init__.py  resource.py  theme.py
t3/logic/: logger.py
t3/view/: __init__.py  fileid.py  header.py  mainwindow.py  sidebar.py
t3ff/bindings/: CMakeLists.txt  bindings.h  bindings.xml
t3ff/src/: t3ff.h  t3reader.h
themes/: light.t3t
